css/index.css
body { 
	background-color:rgba(238.00000101327896, 232.32768058776855, 227.09166795015335, 1);
    width: 100%;
	height: auto;
	display:flex;
	flex-direction: row;
}

/* ---------HERO BANNER----------  */
.first_page{
	width:100%;
	height:auto;
}

/* ---------NAV BAR----------  */

.navbar { 
	width: 100%;
	height:auto;
    top: 0;
    padding: 2em;
	box-shadow: 0px 15px 10px -15px #c4bfbf;
}

.navbar ul{
	list-style: none;
	display: flex;
	justify-content: space-around;
	margin: 15px;
	font-size:35px;
  }

/* unvisited & visited link */
a:link, a:visited {
	color: rgb(45, 45, 45);
  }
  
  /* mouse over link */
  a:hover,a:active  {
	color: rgb(173, 173, 173);
  }
  
/* ---------INTRO INFO----------  */
.hero_banner { 
	width:100%;
	height:auto;
	display: flex;
 	align-items: center; 
	justify-content: center;
	overflow:hidden;
}

.intro_text { 
	/* padding-right:20%; */
	/* 
	width:40%;
	height: auto;
	
	font-family:Abhaya Libre;
	 */
	position:relative;
	top:100%;
	padding-left: 1em;
	font-size:69px;
	flex-basis:50%
}

/*---image positioning----*/

.hero_banner img{
	max-width:100%
}
.image{
	flex-basis:50%;
	padding-top:2em;
}

#photo1{
	position:relative;
	max-width: 90%;
	right:10%; 
	top: -20%;

}
/* ---------WORK SECTION----------  */

.workexperience { 
	width:100%;
	height:auto;
	position:relative;
	left:4%;
	top:0%;
}

.workexperience h2{
	width: 100%;
	height:auto; 
	font-size:45px;
	letter-spacing:0;
	font-weight: normal;
	box-shadow: 0px 15px 10px -15px #c4bfbf;
}

.workgrid{
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-columns: 1fr 1fr 1fr;
	justify-content: center;
  	align-content: center;
    margin: 0 auto;
    padding: 0 20px;
	padding-right: 5%;
    max-width: 100%;
    column-gap: 7%;
}

#workid{
}

.workgrid p{
	font-size:35px;
}

.workgrid img{
	width:100%
}
/* ---------ABOUT ME----------  */
.about_me { 
	width:100%;
	height:auto;
	position:relative;
	left:4%;
	top: 100px;
}
.about_me h2{
	width: 100%;
	height:auto; 
	font-size:53px;
	letter-spacing:0;
	font-weight: normal;
	box-shadow: 0px 15px 10px -15px #c4bfbf;
}

.position{
	display: flex;
    flex-direction: row;
	height: auto;
}
.position p { 
	font-size:50px;
	
}

.position-item:nth-child(1) {
	flex-basis:50%;
	padding-top:2%;
	
    }

.position-item:nth-child(2) {
	padding-top:2%;
	flex-basis:20%;
	width: 100%;
	padding-left: 10%;
	display: block;
	white-space: nowrap; 
    }



.abilities h3{
	font-weight: normal;
}

.scroll_abilities { 
	padding-top: 10%;
	width:100%;
	height:auto;
	position:relative;
}

.scroll_abilities p { 
	white-space: nowrap;
	word-spacing: 2em; 
	padding-bottom: 30%;
	display: block;
	width: 100%;
	font-size:50px;
  	/* transform: translateX(40%); */
	animation: move 90s linear infinite; 
}

@keyframes move {
	to { transform: translateX(-100%); }
  }

/* --------- RESPONSIVE SCREENS ----------  */

@media screen and (max-width:500px){

    .navbar ul {
        display: flex;
        flex-direction:column-reverse;
		justify-content: center;
        list-style: none;
    }
	.intro_text { 
		position:relative;
		top:100%;
		padding-left: 1em;
		font-size:29px;
		flex-basis:50%
	}

	.workgrid{
		display: grid;
		grid-template-columns: repeat(1, 3fr);
		justify-content: center;
		  align-content: center;
		margin: 0 auto;
		padding: 0 20px;
		padding-right: 5%;
		max-width: 100%;
		column-gap: 7%;
	}

	.position{
		display: flex;
		flex-direction: column;
		height: auto;
	}
	.position p { 
		font-size:39px;
		
	}


  }

